--- a/ClientCPP.vcxproj
+++ b/ClientCPP.vcxproj
@@ -137,7 +137,7 @@
     <ClInclude Include="Login.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="userUniID.txt" />
+    <Text Include="userUniID1.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
