--- a/ClientCPP.vcxproj.filters
+++ b/ClientCPP.vcxproj.filters
@@ -18,23 +18,29 @@
     <ClCompile Include="Client.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Communication.cpp">
-      <Filter>Файлы заголовков</Filter>
-    </ClCompile>
     <ClCompile Include="Login.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="SocketCommunication.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="CommandProcess.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Communication.h">
+    <ClInclude Include="SocketCommunication.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Login.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="CommandProcess.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="userUniID1.txt">
+    <Text Include="userUniID.txt">
       <Filter>Файлы ресурсов</Filter>
     </Text>
   </ItemGroup>
